@@ -23,6 +23,13 @@ Briefly:
 
 0.93.2	2004-11-??
 
+	2004-11-21
+
+	* bogotune now uses getopt() to process the argument list,
+	  hence requires a '-n' flag before each non-spam file and a
+	  '-s' flag before each spam file.
+	* bogotune now accepts '-x flags' to set debug flags.
+
 	2004-11-20
 
 	* Make scoring one huge transaction, rather than one individual
